create hero section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         </div>
     </header>
 
+        <div class="hero">
+        <p>Strategy Meets Passion</p>
+        <h1>Football Fantasy Showdown</h1>
+        <span>The fastest, easiest way to Win and compete with the Best</span>
+        <button>Get Started</button>
+    </div>
 
 
 </body>
