--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turnaj</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="/images/logo.png" alt="logo">
-        </div>
-        <div class="header-links">
-           <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-           </ul>
-           <ul class="auth-links">
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Sign Up</a></li>
-           </ul>
-        </div>
+      <div class="logo">
+        <img src="/images/logo.png" alt="logo" />
+      </div>
+      <div class="header-links">
+        <ul class="nav-links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="auth-links">
+          <li><a href="login.html">Login</a></li>
+          <li><a href="register.html">Sign Up</a></li>
+        </ul>
+      </div>
     </header>
 
-        <div class="hero">
-        <p>Strategy Meets Passion</p>
-        <h1>Football Fantasy Showdown</h1>
-        <span>The fastest, easiest way to Win and compete with the Best</span>
-        <button>Get Started</button>
+    <div class="hero">
+      <p>Strategy Meets Passion</p>
+      <h1>
+        Football <br />
+        Fantasy <br />
+        Showdown
+      </h1>
+      <span class="hero-text"
+        >The fastest, easiest way to Win and compete <br />
+        with the Best</span
+      >
+      <span class="get-started">
+        <a href="login.html">Get Started</a>
+      </span>
     </div>
-
-
-</body>
+  </body>
 </html>
