add feature section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,35 @@
         <a href="login.html">Get Started</a>
       </span>
     </div>
+
+
+    <div class="features">
+        <div class="feat-box">
+            <div class="feat-img">
+                <img src="/images/feat1.png" alt="">
+            </div>
+            <h3>Escrow</h3>
+        </div>
+        <div class="feat-box">
+            <div class="feat-img">
+                <img src="/images/feat2.png" alt="">
+            </div>
+            <h3>No limits</h3>
+        </div>
+        <div class="feat-box">
+            <div class="feat-img">
+                <img src="/images/feat3.png" alt="">
+            </div>
+            <h3>Decentralized</h3>
+        </div>
+        <div class="feat-box">
+            <div class="feat-img">
+                <img src="/images/feat4.png" alt="">
+            </div>
+            <h3>Community-Powered</h3>
+        </div>
+    </div>
+
+
   </body>
 </html>
