style feature section

--- a/index.html
+++ b/index.html
@@ -41,34 +41,26 @@
       </span>
     </div>
 
-
     <div class="features">
+      <h1>Top Features</h1>
+      <div class="feat-prod">
         <div class="feat-box">
-            <div class="feat-img">
-                <img src="/images/feat1.png" alt="">
-            </div>
-            <h3>Escrow</h3>
+          <img src="/images/feat1.png" alt="" />
+          <h3>Escrow</h3>
         </div>
         <div class="feat-box">
-            <div class="feat-img">
-                <img src="/images/feat2.png" alt="">
-            </div>
-            <h3>No limits</h3>
+          <img src="/images/feat2.png" alt="" />
+          <h3>No limits</h3>
         </div>
         <div class="feat-box">
-            <div class="feat-img">
-                <img src="/images/feat3.png" alt="">
-            </div>
-            <h3>Decentralized</h3>
+          <img src="/images/feat3.png" alt="" />
+          <h3>Decentralized</h3>
         </div>
         <div class="feat-box">
-            <div class="feat-img">
-                <img src="/images/feat4.png" alt="">
-            </div>
-            <h3>Community-Powered</h3>
+          <img src="/images/feat4.png" alt="" />
+          <h3>Community-Powered</h3>
         </div>
+      </div>
     </div>
-
-
   </body>
 </html>
