create how it works section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,12 @@
         </div>
       </div>
     </div>
+
+
+    <div class="how-it-works">
+        <h3>Get to Know</h3>
+        <h1>How turnaj Works?</h1>
+        <p>Our platform is built specifically to enhance your sports fantasy experience from creating your dream team to real-time scoring and fair play settlements. Follow these simple steps and start winning!</p>
+    </div>
   </body>
 </html>
