create other pages

--- a/index.html
+++ b/index.html
@@ -63,11 +63,99 @@
       </div>
     </div>
 
-
     <div class="how-it-works">
+      <div class="content">
         <h3>Get to Know</h3>
         <h1>How turnaj Works?</h1>
-        <p>Our platform is built specifically to enhance your sports fantasy experience from creating your dream team to real-time scoring and fair play settlements. Follow these simple steps and start winning!</p>
+        <p>
+          Our platform is built specifically to enhance your sports fantasy
+          experience from creating your dream team to real-time scoring and fair
+          play settlements. Follow these simple steps and start winning!
+        </p>
+
+        <div class="steps-container">
+          <div class="step">
+            <div class="step-icon">
+              <img src="/images/feat1.png" alt="Team selection icon" />
+            </div>
+            <h4>Team Selection</h4>
+          </div>
+          <div class="step">
+            <div class="step-icon">
+              <img src="/images/feat2.png" alt="Create a team icon" />
+            </div>
+            <h4>Create a Team</h4>
+          </div>
+          <div class="step">
+            <div class="step-icon">
+              <img src="/images/feat3.png" alt="Join a league icon" />
+            </div>
+            <h4>Join a League</h4>
+          </div>
+          <div class="step">
+            <div class="step-icon">
+              <img src="/images/feat4.png" alt="Check team points icon" />
+            </div>
+            <h4>Check Team Points</h4>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="newsletter-section">
+      <div class="newsletter-container">
+        <h3>Subscribe to our newsletter</h3>
+        <p>
+          Subscribe to our newsletter to receive all the latest news and updates
+        </p>
+        <form class="newsletter-form">
+          <input type="email" placeholder="Enter your email Address" />
+          <button type="submit" class="arrow-btn">
+            <img src="/images/feat1.png" alt="Submit" />
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="/images/logo.png" alt="Turnaj Logo" />
+        </div>
+
+        <div class="footer-links">
+          <a href="#">Contact</a>
+          <a href="#">Terms of Services</a>
+          <a href="#">Privacy</a>
+        </div>
+
+        <div class="copyright">
+          <p>
+            Copyright © <span class="brand-name">Turnaj</span> | Designed by
+            <a href="https://venixpartners.com/" target="_blank" rel="noopener"
+              >Venix</a
+            >
+          </p>
+        </div>
+
+        <div class="social-icons">
+          <a href="#" aria-label="Facebook"
+            ><i class="social-icon facebook">f</i></a
+          >
+          <a href="#" aria-label="Twitter"
+            ><i class="social-icon twitter">t</i></a
+          >
+          <a href="#" aria-label="LinkedIn"
+            ><i class="social-icon linkedin">in</i></a
+          >
+          <a
+            href="https://www.instagram.com/turnaj_?igsh=endqejFuNXE5OHhk"
+            target="_blank"
+            rel="noopener"
+            aria-label="Instagram"
+            ><i class="social-icon instagram">ig</i></a
+          >
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
