--- a/signup.html
+++ b/signup.html
@@ -19,8 +19,8 @@
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul class="auth-links">
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Sign Up</a></li>
+                <li><a href="signin.html">Login</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </div>
     </header>
@@ -29,10 +29,6 @@
         <div class="auth-form">
             <h2>Register for Turnaj</h2>
             <form id="registerForm">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
-                </div>
                 <div class="form-group">
                     <label for="firstName">First Name</label>
                     <input type="text" id="firstName" required>
@@ -55,7 +51,7 @@
                 </div>
                 <button type="submit" class="btn-primary">Register</button>
             </form>
-            <p>Already have an account? <a href="login.html">Login here</a></p>
+            <p>Already have an account? <a href="signin.html">Login here</a></p>
         </div>
     </div>
 
