--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turnaj</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -109,8 +116,12 @@
         </p>
         <form class="newsletter-form">
           <input type="email" placeholder="Enter your email Address" />
-          <button type="submit" class="arrow-btn">
-            <img src="/images/feat1.png" alt="Submit" />
+          <button
+            type="submit"
+            class="arrow-btn"
+            aria-label="Submit newsletter subscription"
+          >
+            <i class="fa-solid fa-arrow-right"></i>
           </button>
         </form>
       </div>
@@ -138,22 +149,23 @@
         </div>
 
         <div class="social-icons">
-          <a href="#" aria-label="Facebook"
-            ><i class="social-icon facebook">f</i></a
-          >
-          <a href="#" aria-label="Twitter"
-            ><i class="social-icon twitter">t</i></a
-          >
-          <a href="#" aria-label="LinkedIn"
-            ><i class="social-icon linkedin">in</i></a
-          >
+          <a href="#" aria-label="Facebook">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" aria-label="Twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" aria-label="LinkedIn">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
           <a
             href="https://www.instagram.com/turnaj_?igsh=endqejFuNXE5OHhk"
             target="_blank"
             rel="noopener"
             aria-label="Instagram"
-            ><i class="social-icon instagram">ig</i></a
           >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
         </div>
       </div>
     </footer>
