--- a/forgot.html
+++ b/forgot.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forgot Password - Turnaj</title>
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/responsive.css" />
   </head>
   <body>
+    <!-- Mobile Navigation -->
+    <div class="mobile-nav-overlay"></div>
+    <nav class="mobile-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="auth-section">
+        <a href="login.html">Login</a>
+        <a href="register.html">Sign Up</a>
+      </div>
+    </nav>
+
     <header>
       <div class="logo">
         <img src="/images/logo.png" alt="Turnaj Logo" />
+      </div>
+      <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
       <div class="header-links">
         <ul class="nav-links">
@@ -49,5 +70,6 @@
     </div>
 
     <script src="/auth/auth.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
