--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </nav>
 
     <header>
-      <div class="logo">
+      <a href="index.html" class="logo">
         <img src="/images/logo.png" alt="logo" />
-      </div>
+      </a>
       <div class="hamburger-menu">
         <span></span>
         <span></span>
