change logo for all files to a link

--- a/dashboard.html
+++ b/dashboard.html
@@ -39,9 +39,9 @@
     </nav>
 
     <header class="dashboard-header">
-      <div class="logo">
+      <a href="dashboard.html" class="logo">
         <img src="/images/logo.png" alt="Turnaj Logo" />
-      </div>
+      </a>
       <div class="hamburger-menu">
         <span></span>
         <span></span>
