--- a/login.html
+++ b/login.html
@@ -25,9 +25,9 @@
     </nav>
 
     <header>
-      <div class="logo">
+      <a href="index.html" class="logo">
         <img src="/images/logo.png" alt="Turnaj Logo" />
-      </div>
+      </a>
       <div class="hamburger-menu">
         <span></span>
         <span></span>
