add new features

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turnaj</title>
+    <title>Blog - Turnaj</title>
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/responsive.css" />
@@ -44,7 +44,7 @@
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="logo" />
+        <img src="/images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -66,86 +66,61 @@
     </header>
 
     <div class="hero">
-      <p>Strategy Meets Passion</p>
+      <p>Turnaj Blog</p>
       <h1>
-        Football <br />
-        Fantasy <br />
-        Showdown
+        Latest News & <br />
+        Fantasy Tips <br />
+        from The Scout
       </h1>
       <span class="hero-text"
-        >The fastest, easiest way to Win and compete <br />
-        with the Best</span
+        >Stay informed with the latest updates, player insights, <br />
+        and strategies to dominate your fantasy leagues.</span
       >
-      <span class="get-started">
-        <a href="login.html">Get Started</a>
-      </span>
     </div>
 
-    <div class="features">
-      <h1>Top Features</h1>
-      <div class="feat-prod">
-        <div class="feat-box">
-          <img src="/images/feat1.png" alt="" />
-          <h3>Escrow</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat2.png" alt="" />
-          <h3>No limits</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat3.png" alt="" />
-          <h3>Decentralized</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat4.png" alt="" />
-          <h3>Community-Powered</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="how-it-works">
-      <div class="content">
-        <h3>Get to Know</h3>
-        <h1>How turnaj Works?</h1>
-        <p>
-          Our platform is built specifically to enhance your sports fantasy
-          experience from creating your dream team to real-time scoring and fair
-          play settlements. Follow these simple steps and start winning!
-        </p>
-
-        <div class="steps-container">
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat1.png" alt="Team selection icon" />
-            </div>
-            <h4>Team Selection</h4>
+    <section class="blog-section">
+      <h1>Featured Articles</h1>
+      <div class="blog-grid">
+        <div class="blog-card">
+          <img src="/images/messi.avif" alt="Player News" />
+          <div class="blog-content">
+            <h3>FPL Player Price Changes - Rises, Falls and Top Transfers</h3>
+            <p>Get the latest on player price movements and transfer recommendations for the upcoming gameweek.</p>
+            <a href="#" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat2.png" alt="Create a team icon" />
-            </div>
-            <h4>Create a Team</h4>
+        </div>
+        <div class="blog-card">
+          <img src="/images/arsenal.jpg" alt="Injuries" />
+          <div class="blog-content">
+            <h3>Latest Premier League Player Injuries - Club by Club News</h3>
+            <p>Stay updated on injury reports and their impact on your fantasy team selections.</p>
+            <a href="#" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat3.png" alt="Join a league icon" />
-            </div>
-            <h4>Join a League</h4>
+        </div>
+        <div class="blog-card">
+          <img src="/images/man-u.jpg" alt="Tips" />
+          <div class="blog-content">
+            <h3>How to Win Your FPL League: Expert Strategies</h3>
+            <p>Pro tips on team building, chip usage, and maximizing your points.</p>
+            <a href="#" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat4.png" alt="Check team points icon" />
-            </div>
-            <h4>Check Team Points</h4>
+        </div>
+        <div class="blog-card">
+          <img src="/images/chealsea.jpg" alt="Guide" />
+          <div class="blog-content">
+            <h3>Basics Explained: How to Play Fantasy Football</h3>
+            <p>A beginner's guide to getting started with Turnaj and fantasy football.</p>
+            <a href="#" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
     <div class="newsletter-section">
       <div class="newsletter-container">
         <h3>Subscribe to our newsletter</h3>
         <p>
-          Subscribe to our newsletter to receive all the latest news and updates
+          Get the latest blog posts and fantasy football insights delivered to your inbox.
         </p>
         <form class="newsletter-form">
           <input type="email" placeholder="Enter your email Address" />
@@ -167,7 +142,7 @@
         </div>
 
         <div class="footer-links">
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
           <a href="#">Terms of Services</a>
           <a href="#">Privacy</a>
         </div>
@@ -206,4 +181,5 @@
     <!-- Scripts -->
     <script src="/js/script.js"></script>
   </body>
-</html>
+</html></content>
+<filePath">c:\Users\USER\Desktop\VS Code\venix\venix\blog.html
