--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turnaj</title>
+    <title>About Us - Turnaj</title>
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/responsive.css" />
@@ -44,7 +44,7 @@
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="logo" />
+        <img src="/images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -66,86 +66,92 @@
     </header>
 
     <div class="hero">
-      <p>Strategy Meets Passion</p>
+      <p>About Turnaj</p>
       <h1>
-        Football <br />
-        Fantasy <br />
-        Showdown
+        Revolutionizing <br />
+        Fantasy Football <br />
+        Experience
       </h1>
       <span class="hero-text"
-        >The fastest, easiest way to Win and compete <br />
-        with the Best</span
+        >Turnaj is the ultimate platform for fantasy football enthusiasts. <br />
+        Build your dream team, compete with friends, and win big prizes.</span
       >
-      <span class="get-started">
-        <a href="login.html">Get Started</a>
-      </span>
     </div>
 
     <div class="features">
-      <h1>Top Features</h1>
+      <h1>Why Choose Turnaj?</h1>
       <div class="feat-prod">
         <div class="feat-box">
-          <img src="/images/feat1.png" alt="" />
-          <h3>Escrow</h3>
+          <img src="/images/feat1.png" alt="Squad Selection" />
+          <h3>Pick Your Squad</h3>
+          <p>Use your budget to select 15 players from the Premier League.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat2.png" alt="" />
-          <h3>No limits</h3>
+          <img src="/images/feat2.png" alt="Create Leagues" />
+          <h3>Create & Join Leagues</h3>
+          <p>Play against friends, family, or join public leagues and cups.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat3.png" alt="" />
-          <h3>Decentralized</h3>
+          <img src="/images/feat3.png" alt="Compete" />
+          <h3>Compete & Win</h3>
+          <p>Real-time scoring, fair settlements, and exciting prizes.</p>
         </div>
         <div class="feat-box">
-          <img src="/images/feat4.png" alt="" />
+          <img src="/images/feat4.png" alt="Community" />
           <h3>Community-Powered</h3>
+          <p>Join millions of players in the biggest fantasy football game.</p>
         </div>
       </div>
     </div>
 
     <div class="how-it-works">
       <div class="content">
-        <h3>Get to Know</h3>
-        <h1>How turnaj Works?</h1>
+        <h3>Our Mission</h3>
+        <h1>What Makes Turnaj Special?</h1>
         <p>
-          Our platform is built specifically to enhance your sports fantasy
-          experience from creating your dream team to real-time scoring and fair
-          play settlements. Follow these simple steps and start winning!
+          Turnaj is designed to bring the thrill of football management to your fingertips.
+          From selecting your starting eleven to tracking live scores, we make fantasy football
+          accessible, exciting, and rewarding for everyone.
         </p>
 
         <div class="steps-container">
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat1.png" alt="Team selection icon" />
+              <img src="/images/feat1.png" alt="Register icon" />
             </div>
-            <h4>Team Selection</h4>
+            <h4>Register & Login</h4>
+            <p>Create your account and join the community.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat2.png" alt="Create a team icon" />
+              <img src="/images/feat2.png" alt="Build team icon" />
             </div>
-            <h4>Create a Team</h4>
+            <h4>Build Your Team</h4>
+            <p>Select players within your budget and formation.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat3.png" alt="Join a league icon" />
+              <img src="/images/feat3.png" alt="Join leagues icon" />
             </div>
-            <h4>Join a League</h4>
+            <h4>Join Leagues</h4>
+            <p>Compete in private or public leagues.</p>
           </div>
           <div class="step">
             <div class="step-icon">
-              <img src="/images/feat4.png" alt="Check team points icon" />
+              <img src="/images/feat4.png" alt="Track progress icon" />
             </div>
-            <h4>Check Team Points</h4>
+            <h4>Track & Win</h4>
+            <p>Monitor scores and climb the leaderboards.</p>
           </div>
         </div>
       </div>
     </div>
+
     <div class="newsletter-section">
       <div class="newsletter-container">
-        <h3>Subscribe to our newsletter</h3>
+        <h3>Stay Updated</h3>
         <p>
-          Subscribe to our newsletter to receive all the latest news and updates
+          Subscribe to our newsletter for the latest news, tips, and updates on Turnaj.
         </p>
         <form class="newsletter-form">
           <input type="email" placeholder="Enter your email Address" />
@@ -167,7 +173,7 @@
         </div>
 
         <div class="footer-links">
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
           <a href="#">Terms of Services</a>
           <a href="#">Privacy</a>
         </div>
@@ -206,4 +212,5 @@
     <!-- Scripts -->
     <script src="/js/script.js"></script>
   </body>
-</html>
+</html></content>
+<filePath">c:\Users\USER\Desktop\VS Code\venix\venix\about-us.html
