--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Turnaj</title>
+    <title>Contact - Turnaj</title>
     <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/responsive.css" />
@@ -44,7 +44,7 @@
 
     <header>
       <a href="index.html" class="logo">
-        <img src="/images/logo.png" alt="logo" />
+        <img src="/images/logo.png" alt="Turnaj Logo" />
       </a>
       <div class="hamburger-menu">
         <span></span>
@@ -66,97 +66,69 @@
     </header>
 
     <div class="hero">
-      <p>Strategy Meets Passion</p>
+      <p>Contact Us</p>
       <h1>
-        Football <br />
-        Fantasy <br />
-        Showdown
+        Get in Touch <br />
+        with Turnaj <br />
+        Support
       </h1>
       <span class="hero-text"
-        >The fastest, easiest way to Win and compete <br />
-        with the Best</span
+        >Have questions about fantasy football or need help? <br />
+        Reach out to our team and we'll get back to you soon.</span
       >
-      <span class="get-started">
-        <a href="login.html">Get Started</a>
-      </span>
     </div>
 
-    <div class="features">
-      <h1>Top Features</h1>
-      <div class="feat-prod">
-        <div class="feat-box">
-          <img src="/images/feat1.png" alt="" />
-          <h3>Escrow</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat2.png" alt="" />
-          <h3>No limits</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat3.png" alt="" />
-          <h3>Decentralized</h3>
-        </div>
-        <div class="feat-box">
-          <img src="/images/feat4.png" alt="" />
-          <h3>Community-Powered</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="how-it-works">
-      <div class="content">
-        <h3>Get to Know</h3>
-        <h1>How turnaj Works?</h1>
-        <p>
-          Our platform is built specifically to enhance your sports fantasy
-          experience from creating your dream team to real-time scoring and fair
-          play settlements. Follow these simple steps and start winning!
-        </p>
-
-        <div class="steps-container">
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat1.png" alt="Team selection icon" />
-            </div>
-            <h4>Team Selection</h4>
+    <div class="contact-container">
+      <div class="contact-form-section">
+        <h2>Send us a Message</h2>
+        <form id="contactForm">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" required />
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat2.png" alt="Create a team icon" />
-            </div>
-            <h4>Create a Team</h4>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" required />
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat3.png" alt="Join a league icon" />
-            </div>
-            <h4>Join a League</h4>
+          <div class="form-group">
+            <label for="subject">Subject</label>
+            <input type="text" id="subject" required />
           </div>
-          <div class="step">
-            <div class="step-icon">
-              <img src="/images/feat4.png" alt="Check team points icon" />
-            </div>
-            <h4>Check Team Points</h4>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" rows="5" required></textarea>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="newsletter-section">
-      <div class="newsletter-container">
-        <h3>Subscribe to our newsletter</h3>
-        <p>
-          Subscribe to our newsletter to receive all the latest news and updates
-        </p>
-        <form class="newsletter-form">
-          <input type="email" placeholder="Enter your email Address" />
-          <button
-            type="submit"
-            class="arrow-btn"
-            aria-label="Submit newsletter subscription"
-          >
-            <i class="fa-solid fa-arrow-right"></i>
-          </button>
+          <button type="submit" class="btn-primary">Send Message</button>
         </form>
+      </div>
+      <div class="contact-info">
+        <h2>Contact Information</h2>
+        <div class="info-item">
+          <i class="fa-solid fa-envelope"></i>
+          <div>
+            <h3>Email</h3>
+            <p>support@turnaj.com</p>
+          </div>
+        </div>
+        <div class="info-item">
+          <i class="fa-solid fa-phone"></i>
+          <div>
+            <h3>Phone</h3>
+            <p>+1 (555) 123-4567</p>
+          </div>
+        </div>
+        <div class="info-item">
+          <i class="fa-solid fa-map-marker-alt"></i>
+          <div>
+            <h3>Address</h3>
+            <p>123 Football Street<br>London, UK</p>
+          </div>
+        </div>
+        <div class="social-links">
+          <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        </div>
       </div>
     </div>
 
@@ -167,7 +139,7 @@
         </div>
 
         <div class="footer-links">
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
           <a href="#">Terms of Services</a>
           <a href="#">Privacy</a>
         </div>
@@ -206,4 +178,5 @@
     <!-- Scripts -->
     <script src="/js/script.js"></script>
   </body>
-</html>
+</html></content>
+<filePath">c:\Users\USER\Desktop\VS Code\venix\venix\contact.html
