--- a/forgot.html
+++ b/forgot.html
@@ -14,9 +14,9 @@
     <nav class="mobile-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="auth-section">
         <a href="login.html">Login</a>
@@ -36,9 +36,9 @@
       <div class="header-links">
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul class="auth-links">
           <li><a href="login.html">Login</a></li>
